yeti/mongo/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: yeti-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: yeti-mongo
  template:
    metadata:
      labels:
        name: yeti-mongo
    spec:
      containers:
        - image: image_prefix:mongo
          name: yeti-mongo
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
          ports:
            - name: mongo
              containerPort: 27017
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
          livenessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 60
          volumeMounts:
            - name: yeti-mongo
              mountPath: /data/db
              readOnly: false

      restartPolicy: Always
      volumes:
        - name: yeti-mongo
          persistentVolumeClaim:
            claimName: yeti-mongo
