yeti/mongo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yeti-mongo
spec:
  ports:
    - name: mongo
      port: 27017
      protocol: TCP
      targetPort: mongo
  selector:
    name: yeti-mongo
